--- a/styles.css
+++ b/styles.css
@@ -7,5 +7,40 @@ header > img {
   background-color: black;
   grid-column-start: 1;
   grid-column-end: 3;
-  
 }
+
+main {
+  display: flex;
+  flex-wrap: wrap;}
+
+#results {
+  background-color: indianred;
+  width: 10%;
+  margin-right: 5%;
+  height: 300px;
+}
+
+#choices-rules{
+  width: 80%;
+}
+
+ #choices{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+ }
+
+ #rules{
+  display: flex;
+  justify-content: flex-end;
+ }
+
+ footer {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+ }
+
+ h3{
+  font-size: 2em;
+ }
